Se agrego el login de la página, crea correctamente clientes nuevos

--- a/tienda/src/index.html
+++ b/tienda/src/index.html
@@ -18,7 +18,8 @@
 
   <!-- Main Theme Styles + Bootstrap-->
   <link rel="stylesheet" media="screen" href="assets/css/demo/ecommerce/theme.min.css">
-    
+  <link rel="stylesheet" href="assets/css/iziToast.min.css">
+
   <style>
     .pagination{
     margin-bottom: 0px;
@@ -69,7 +70,7 @@
       height: 2.75rem;
       margin-bottom: .75rem;
       vertical-align: text-bottom;
-      background-color: #cfcfd1; 
+      background-color: #cfcfd1;
       border-radius: 50%;
       opacity: 0;
       -webkit-animation: spinner .75s linear infinite;
@@ -161,6 +162,7 @@
 
   <!-- Main theme script-->
   <script src="assets/js/theme.min.js"></script>
+  <script src="assets/js/iziToast.min.js"></script>
 
 </body>
 </html>
