--- a/tienda/src/index.html
+++ b/tienda/src/index.html
@@ -19,7 +19,8 @@
   <!-- Main Theme Styles + Bootstrap-->
   <link rel="stylesheet" media="screen" href="assets/css/demo/ecommerce/theme.min.css">
   <link rel="stylesheet" href="assets/css/iziToast.min.css">
-
+  <link rel="stylesheet" href="assets/css/simplebar.min.css">
+  <link rel="stylesheet" href="assets/css/nouislider.min.css">
   <style>
     .pagination{
     margin-bottom: 0px;
@@ -159,6 +160,9 @@
   <script src="assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
   <script src="assets/vendor/tiny-slider/dist/min/tiny-slider.js"></script>
+  <script src="assets/js/simplebar.min.js"></script>
+  <script src="assets/js/nouislider.min.js"></script>
+  <script src="assets/js/smooth-scroll.polyfills.min.js"></script>
 
   <!-- Main theme script-->
   <script src="assets/js/theme.min.js"></script>
