Modificaciones de estilos

--- a/tienda/src/index.html
+++ b/tienda/src/index.html
@@ -153,9 +153,9 @@
   <style>
     .cs-range-slider-ui .noUi-handle {
       top: 50% !important;
-      width: .875rem !important;
-      height: .875rem !important;
-      margin-top: -.4375rem !important;
+      width: 1.125rem !important;
+      height: 1.125rem !important;
+      margin-top: -.375rem !important;
       border: 2px solid #fff !important;
       border-radius: 50% !important;
       box-shadow: none !important;
@@ -163,7 +163,7 @@
     }
 
     .cs-range-slider-ui {
-      height: .125rem !important;
+      height: 10px !important;
       margin: 3rem 0 !important;
       margin-right: 20px !important;
       margin-left: 20px !important;
