Paypal creación pagos

--- a/tienda/src/index.html
+++ b/tienda/src/index.html
@@ -207,6 +207,8 @@
   <script src="assets/vendor/lightgallery.js/dist/js/lightgallery.min.js"></script>
   <script src="assets/js/cleave.min.js"></script>
   <script src="assets/js/sticky-sidebar.min.js"></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=AUqJPTkyAg-q8QmEuaMZObMxN8FC_0ipiqFBXkRd5XTCHmX97WpSKeaTYoSuxEPlcsYMk76GBC50av8s"></script>
+
 
 </body>
 
